  1 y0 + 2 y1 + 4 y2 + 8 y3 <= 10 and x = 1 y0 + 2 y1 + 4 y2 + 8 y3

fixed bugs:
- fixed minor bugs with respect to counting generated and lifted cuts in sepa_oddcycle
- fixed bug in heur_zirounding with computation of up/downslacks
- fixed bug in cons_linear w.r.t recalculation of unreliable activities

parameters:
- new parameter <presolving/convertinttobin/maxdomainsize> by default is set to SCIP_LONGINT_MAX, which deternmines
  the domainsize for which integers are converted to their binary representation
- new parameter <presolving/convertinttobin/onlypoweroftwo> by default is set to FALSE, that parameter allows you to
  only convert integer variables with a domainsize of 2^p - 1 to their binary representation
- new parameter <presolving/convertinttobin/samelocksinbothdirections> by default is set to FALSE, that parameter allows
  you to convert only integer variables to their binary representation, which have the same amount of up- and downlocks
- branching/fullstrong/reevalage changed from an integer to a longint parameter
- new parameter for changing the timingmask for calling the propagtion method of all propagator plugins
  propagating/%s/timingmask and all constraint plugins constraints/%s/timingmask
- new parameter constraints/indicator/dualreductions to enable dual presolving/propagation steps
- new parameters constraints/indicator/{sepacouplingcuts,sepacouplinglocal} to enable separation of (local) cuts
- new parameters constraints/indicator/{maxsepacuts,maxsepacutsroot} to restrict the number of separated cuts
- new parameter separating/oddcycle/maxunsucessfull to automatically turn off separation
- new parameter misc/num_recompfac which denotes the factor, by which the absolute of an iteratively updated value has
  to be decreased in order to recompute the value from scratch
- new parameters separating/cgmip/{minnodelimit,maxnodelimit} to determine node limit. Removed parameter 
  separating/cgmip/nodelimit.

features: